@@ -11,42 +11,61 @@
 #define IFF_FORM MakeID('F','O','R','M')
 #define IFF_ILBM MakeID('I','L','B','M')
 #define IFF_BMHD MakeID('B','M','H','D')
+#define IFF_CMAP MakeID('C','M','A','P')
+#define IFF_CAMG MakeID('C','A','M','G')
 #define IFF_BODY MakeID('B','O','D','Y')
 
-static ULONG _ILBM_SEEK_CHUNK (struct FileHandle *fh, ULONG chunkID)
+void ILBM_LOAD (USHORT fno, ILBM_META_t *pMeta, PALETTE_t pPalette, BlitNode blt)
 {
-    ULONG h;
     char hdr[5] = {0,0,0,0,0};
+
+    if (!pMeta)
+    {
+        ERROR(AE_IFF);
+        return;
+    }
+    pMeta->viewMode = 0;
+
+    struct FileHandle *fh = _aio_getfh(fno);
+    if (!fh)
+    {
+        ERROR(AE_IFF);
+        return;
+    }
 
     Seek (MKBADDR(fh), 0, OFFSET_BEGINNING);
 
-    LONG l = Read (MKBADDR(fh), &h, 4);
-    if ((l != 4) || (h != IFF_FORM))
+    ULONG cid;
+    ULONG clen;
+
+    LONG l = Read (MKBADDR(fh), &cid, 4);
+    if ((l != 4) || (cid != IFF_FORM))
     {
         ERROR(AE_IFF);
-        return 0l;
+        return;
     }
 
-    DPRINTF ("_ILBM_SEEK_CHUNK: FORM ok.\n");
+    DPRINTF ("_ILBM_LOAD: FORM ok.\n");
 
     // ignore FORM length
-    l = Read (MKBADDR(fh), &h, 4);
+    l = Read (MKBADDR(fh), &clen, 4);
     if (l != 4)
     {
         ERROR(AE_IFF);
-        return 0l;
+        return;
     }
 
-    l = Read (MKBADDR(fh), &h, 4);
-    if ((l != 4) || (h != IFF_ILBM))
+    l = Read (MKBADDR(fh), &cid, 4);
+    if ((l != 4) || (cid != IFF_ILBM))
     {
         ERROR(AE_IFF);
-        return 0l;
+        return;
     }
+
+    DPRINTF ("_ILBM_LOAD: format is ILBM. good.\n");
 
     while (TRUE)
     {
-        ULONG cid;
         l = Read (MKBADDR(fh), &cid, 4);
         if (l != 4)
         {
@@ -54,149 +73,173 @@ static ULONG _ILBM_SEEK_CHUNK (struct FileHandle *fh, ULONG chunkID)
         }
         ULONG *p = (ULONG*)hdr;
         *p = cid;
-        DPRINTF ("_ILBM_SEEK_CHUNK: chunk id=%d (%s)\n", cid, hdr);
 
-        l = Read (MKBADDR(fh), &h, 4);
+
+        l = Read (MKBADDR(fh), &clen, 4);
         if (l != 4)
         {
             ERROR(AE_IFF);
-            return 0l;
+            return;
         }
-        if (cid == chunkID)
+
+        DPRINTF ("_ILBM_LOAD: chunk id=%d (%s) len=%d\n", cid, hdr, clen);
+
+        if ( cid == IFF_BMHD)
         {
-            DPRINTF ("_ILBM_SEEK_CHUNK: *** CHUNK FOUND ***\n");
-            DPRINTF ("_ILBM_SEEK_CHUNK: length: %d\n", h);
-            return h;
+            if (!clen || (clen > sizeof (ILBM_META_t)) )
+            {
+                ERROR(AE_IFF);
+                return;
+            }
+
+            ULONG l = Read (MKBADDR(fh), pMeta, clen);
+            if (l!=clen)
+                ERROR(AE_IFF);
         }
         else
         {
-            DPRINTF ("_ILBM_SEEK_CHUNK: skipping %d bytes\n", h);
-            Seek (MKBADDR(fh), h, OFFSET_CURRENT);
+            if ( cid == IFF_CAMG )
+            {
+                if (clen != 4)
+                {
+                    ERROR(AE_IFF);
+                    return;
+                }
+
+                ULONG l = Read (MKBADDR(fh), &pMeta->viewMode, clen);
+                if (l!=clen)
+                    ERROR(AE_IFF);
+            }
+            else
+            {
+                if ( pPalette && (cid == IFF_CMAP) )
+                {
+                    if (!clen)
+                    {
+                        ERROR(AE_IFF);
+                        return;
+                    }
+                    DPRINTF ("ILBM_LOAD CMAP len=%ld\n", clen);
+
+                    UBYTE *buf = ALLOCATE_(clen, 0);
+                    if (!buf)
+                    {
+                        ERROR(AE_IFF);
+                        return;
+                    }
+
+                    ULONG l = Read (MKBADDR(fh), buf, clen);
+                    if (l!=clen)
+                    {
+                        DEALLOCATE(buf);
+                        ERROR(AE_IFF);
+                        return;
+                    }
+
+                    pPalette->numEntries = l/3;
+                    UBYTE *p = buf;
+                    for (SHORT i=0; i<pPalette->numEntries; i++)
+                    {
+                        pPalette->colors[i].r = *p++;
+                        pPalette->colors[i].g = *p++;
+                        pPalette->colors[i].b = *p++;
+                    }
+                    DEALLOCATE(buf);
+                }
+                else
+                {
+                    if ( blt && (cid == IFF_BODY) )
+                    {
+                        if (!clen)
+                        {
+                            ERROR(AE_IFF);
+                            return;
+                        }
+                        DPRINTF ("ILBM_LOAD BODY len=%ld\n", clen);
+
+                        DPRINTF ("ILBM_LOAD BODY: pMeta: %d x %d : %d \n",
+                                 (signed int) pMeta->w, (signed int) pMeta->h, (signed int) pMeta->nPlanes);
+                        DPRINTF ("ILBM_LOAD BODY: blt : %d x %d : %d \n",
+                                 (signed int) blt->width, (signed int) blt->height, (signed int) blt->bm.Depth);
+
+                        if ((blt->width < pMeta->w) || (blt->height < pMeta->h) || (blt->bm.Depth != pMeta->nPlanes))
+                        {
+                            DPRINTF ("ILBM_LOAD BODY: invalid bit dims %d x %d : %d vs %d x %d : %d\n",
+                                     (signed int) blt->width, (signed int) blt->height, (signed int) blt->bm.Depth,
+                                     (signed int) pMeta->w, (signed int) pMeta->h, (signed int) pMeta->nPlanes);
+                            ERROR(AE_IFF);
+                            return;
+                        }
+
+                        DPRINTF ("ILBM_LOAD BODY ALLOCATING BUFFER, clen=%d\n", clen);
+
+                        BYTE *src = ALLOCATE_(clen, 0);
+                        if (!src)
+                        {
+                            ERROR(AE_IFF);
+                            return;
+                        }
+
+                        ULONG l = Read (MKBADDR(fh), src, clen);
+                        if (l!=clen)
+                        {
+                            DEALLOCATE(src);
+                            ERROR(AE_IFF);
+                            return;
+                        }
+
+                        SHORT linelen = pMeta->w/8;
+
+                        for (SHORT i=0; i<pMeta->h; i++)
+                        {
+                            for (SHORT iPlane=0; iPlane<pMeta->nPlanes; iPlane++)
+                            {
+                                BYTE *dst = (BYTE *)(blt->bm.Planes[iPlane]) + linelen*i;
+
+                                if (pMeta->compression == 1)	// run length encoding
+                                {
+                                    SHORT rowbytes = linelen;
+
+                                    while (rowbytes)
+                                    {
+                                        BYTE n = *src++;
+
+                                        if (n>=0)
+                                        {
+                                            CopyMem (src, dst, ++n);
+                                            rowbytes -= n;
+                                            dst      += n;
+                                            src      += n;
+                                        }
+                                        else
+                                        {
+                                            n         = -n+1;
+                                            rowbytes -= n;
+                                            _MEMSET (dst, *src++, n);
+                                            dst += n;
+                                        }
+                                    }
+                                }
+                                else
+                                {
+                                    CopyMem (src, dst, linelen);
+                                    src += linelen;
+                                    dst += linelen;
+                                }
+                            }
+                        }
+
+                        DEALLOCATE(src);
+                    }
+                    else
+                    {
+                        DPRINTF ("_ILBM_LOAD skipping %d bytes\n", clen);
+                        Seek (MKBADDR(fh), clen, OFFSET_CURRENT);
+                    }
+                }
+            }
         }
     }
-
-    return 0l;
-}
-
-void ILBM_LOAD_BMHD (USHORT fno, ILBM_BitMapHeader_t *pBMHD)
-{
-    struct FileHandle *fh = _aio_getfh(fno);
-    if (!fh)
-        return;
-
-    DPRINTF ("ILBM_LOAD_BMHD fno=%d\n", fno);
-
-    ULONG len = _ILBM_SEEK_CHUNK (fh, IFF_BMHD);
-    if (len != sizeof (ILBM_BitMapHeader_t))
-    {
-        ERROR(AE_IFF);
-        return;
-    }
-
-    ULONG l = Read (MKBADDR(fh), pBMHD, len);
-    if (l!=len)
-        ERROR(AE_IFF);
-
-    DPRINTF ("ILBM_LOAD_BMHD len=%ld\n", len);
-    DPRINTF ("ILBM_LOAD_BMHD pBMHD->w=%d, pBMHD->h=%d\n", pBMHD->w, pBMHD->h);
-
-}
-
-void ILBM_LOAD_CMAP (USHORT fno, PALETTE_t *pPalette)
-{
-    DPRINTF ("ILBM_LOAD_CMAP fno=%ld\n", fno);
-}
-
-void ILBM_LOAD_BODY (USHORT fno, ILBM_BitMapHeader_t *pBMHD, BlitNode blit)
-{
-    struct FileHandle *fh = _aio_getfh(fno);
-    if (!fh)
-        return;
-
-    DPRINTF ("ILBM_LOAD_BODY fno=%d\n", fno);
-
-    DPRINTF ("ILBM_LOAD_BODY: pBMHD: %d x %d : %d \n",
-             (signed int) pBMHD->w, (signed int) pBMHD->h, (signed int) pBMHD->nPlanes);
-    DPRINTF ("ILBM_LOAD_BODY: blit : %d x %d : %d \n",
-             (signed int) blit->width, (signed int) blit->height, (signed int) blit->bm.Depth);
-
-    if ((blit->width < pBMHD->w) || (blit->height < pBMHD->h) || (blit->bm.Depth != pBMHD->nPlanes))
-    {
-        DPRINTF ("ILBM_LOAD_BODY: invalid bit dims %d x %d : %d vs %d x %d : %d\n",
-                 (signed int) blit->width, (signed int) blit->height, (signed int) blit->bm.Depth,
-                 (signed int) pBMHD->w, (signed int) pBMHD->h, (signed int) pBMHD->nPlanes);
-        ERROR(AE_IFF);
-        return;
-    }
-
-    ULONG len = _ILBM_SEEK_CHUNK (fh, IFF_BODY);
-    if (!len)
-    {
-        DPRINTF ("ILBM_LOAD_BODY error: BODY chunk not found!\n");
-        ERROR(AE_IFF);
-        return;
-    }
-
-    DPRINTF ("ILBM_LOAD_BODY ALLOCATING BUFFER, len=%d\n", len);
-
-    BYTE *src = ALLOCATE_(len, 0);
-    if (!src)
-    {
-        ERROR(AE_IFF);
-        return;
-    }
-
-    ULONG l = Read (MKBADDR(fh), src, len);
-    if (l!=len)
-	{
-        ERROR(AE_IFF);
-		return;
-	}
-
-	SHORT linelen = pBMHD->w/8;
-
-	for (SHORT i=0; i<pBMHD->h; i++)
-	{
-		for (SHORT iPlane=0; iPlane<pBMHD->nPlanes; iPlane++)
-		{
-			BYTE *dst = (BYTE *)(blit->bm.Planes[iPlane]) + linelen*i;
-
-			if (pBMHD->compression == 1)	// run length encoding
-			{
-				SHORT rowbytes = linelen;
-
-				while (rowbytes)
-				{
-					BYTE n = *src++;
-
-					if (n>=0)
-					{
-					    CopyMem (src, dst, ++n);
-				        rowbytes -= n;
-					    dst      += n;
-						src      += n;
-					}
-					else
-					{
-					    n         = -n+1;
-						rowbytes -= n;
-  					    _MEMSET (dst, *src++, n);
-					    dst += n;
-					}
-				}
-			}
-			else
-			{
-			    CopyMem (src, dst, linelen);
-			    src += linelen;
-                dst += linelen;
-			}
-		}
-	}
-
-	DEALLOCATE(src);
-
-    return;
 }
 
 void _IFFSupport_init(void)
