@@ -9,23 +9,27 @@
 
 #define AE_IFF                      200
 
-/* A BitMapHeader is stored in a BMHD chunk. */
 typedef struct
 {
-    UWORD       w, h;                   /* raster width & height in pixels */
-    WORD        x, y;                   /* position for this image */
-    UBYTE       nPlanes;                /* # source bitplanes */
-    UBYTE       masking;                /* masking technique */
-    UBYTE       compression;            /* compression algorithm */
-    UBYTE       pad1;                   /* UNUSED.  For consistency, put 0 here.*/
-    UWORD       transparentColor;       /* transparent "color number" */
-    UBYTE       xAspect, yAspect;       /* aspect ratio, a rational number x/y */
-    WORD        pageWidth, pageHeight;  /* source "page" size in pixels */
-} ILBM_BitMapHeader_t;
+    // BitMapHeader (BMHD chunk)
 
-void ILBM_LOAD_BMHD (USHORT fno, ILBM_BitMapHeader_t *pBMHD);
-void ILBM_LOAD_CMAP (USHORT fno, PALETTE_t *pPalette);
-void ILBM_LOAD_BODY (USHORT fno, ILBM_BitMapHeader_t *pBMHD, BlitNode blit);
+    UWORD       w, h;                   // raster width & height in pixels
+    WORD        x, y;                   // position for this image
+    UBYTE       nPlanes;                // # source bitplanes
+    UBYTE       masking;                // masking technique
+    UBYTE       compression;            // compression algorithm
+    UBYTE       pad1;                   // UNUSED.  For consistency, put 0 here.
+    UWORD       transparentColor;       // transparent "color number"
+    UBYTE       xAspect, yAspect;       // aspect ratio, a rational number x/y
+    WORD        pageWidth, pageHeight;  // source "page" size in pixels
+
+    // CAMG (optional)
+
+    ULONG       viewMode;
+
+} ILBM_META_t;
+
+void ILBM_LOAD (USHORT fno, ILBM_META_t *pMeta, PALETTE_t pPalette, BlitNode blt);
 
 #endif
 
